--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.10.0",
+    "caniuse-lite": "^1.0.30001727",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
