--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,17 +14,26 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitAny": false,
-    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
 
+    /* Linting */
+   "strict": true,
+"noUnusedLocals": true,
+"noUnusedParameters": true,
+"noImplicitAny": true,
+"noFallthroughCasesInSwitch": true,
+
+    /* Path mapping */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    /* Types */
+    "types": ["vite/client", "node"]
   },
   "include": ["src"]
 }
