--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+       "types": ["vite/client"]
     },
     "noImplicitAny": false,
     "noUnusedParameters": false,
